--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ fabric.properties
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/inspectionProfiles/Project_Default.xml
 /.idea/vcs.xml
+/.idea/encodings.xml
