--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "openai>=1.88.0",
+    "pymupdf>=1.26.3",
     "streamlit>=1.46.0",
     "watchdog>=6.0.0",
 ]
